feat: add toggleVote route
