# vote/handler.go
@@ -2,6 +2,7 @@ package vote
 
 import (
 	"database/sql"
+	"fmt"
 	"net/http"
 	"product-feedback/middleware"
 	"product-feedback/utils"
@@ -108,7 +109,7 @@ func (h *voteHandler) createVote(c *gin.Context) {
 		return
 	}
 
-	voteId, err := h.service.Create(userId, input)
+	voteId, err := h.service.Create(userId, input.FeedbackId)
 	switch err {
 	case nil:
 		break
@@ -126,7 +127,7 @@ func (h *voteHandler) createVote(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusNotImplemented, map[string]interface{}{
+	c.JSON(http.StatusOK, map[string]interface{}{
 		"voteId": voteId,
 	})
 }
@@ -179,6 +180,67 @@ func (h *voteHandler) deleteVote(c *gin.Context) {
 		})
 		return
 	default:
+		h.l.Error(err)
+		c.AbortWithStatusJSON(http.StatusInternalServerError, map[string]interface{}{
+			"message": "Internal server error",
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{
+		"message": "OK",
+	})
+}
+
+type toggleVoteInput struct {
+	// The id of the feedback vote is related to
+	//
+	// required: true
+	// min: 1
+	FeedbackId int `json:"feedbackId" validate:"required,gt=0"`
+}
+
+// swagger:route POST /api/votes/toggle votes toggleVote
+// Toggles a vote
+//
+// security:
+// - Bearer:
+//
+// responses:
+//	200: okResponse
+//	500: errorResponse
+
+func (h *voteHandler) toggleVote(c *gin.Context) {
+	userId, err := middleware.GetUserIdFromGinCtx(c)
+	if err != nil {
+		h.l.Error(err)
+		c.AbortWithStatusJSON(http.StatusUnauthorized, map[string]interface{}{
+			"message": "Unauthorized",
+		})
+		return
+	}
+
+	var input toggleVoteInput
+	if err = c.BindJSON(&input); err != nil {
+		h.l.Error(err)
+		err = fmt.Errorf("invalid input: %+v", err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, map[string]interface{}{
+			"message": err.Error(),
+		})
+		return
+	}
+
+	if err = h.v.ValidateStruct(input); err != nil {
+		h.l.Error(err)
+		err = fmt.Errorf("invalid argument: %+v", err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, map[string]interface{}{
+			"message": err.Error(),
+		})
+		return
+	}
+
+	err = h.service.Toggle(userId, input.FeedbackId)
+	if err != nil {
 		h.l.Error(err)
 		c.AbortWithStatusJSON(http.StatusInternalServerError, map[string]interface{}{
 			"message": "Internal server error",
